# almaz

./: .gitignore  Makefile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml  requirements.txt
almaz/: __init__.py  dependencies.py
almaz/backend/: __init__.py
almaz/celery/: celery_app.py  tasks.py
almaz/database/: storage_models.py
almaz/database/alembic/: env.py
almaz/database/alembic/versions/: 000000000000_first_revision.py  aafbeafa80b9_added_tables_sales_data_llmanalisis.py
docker/backend/: Dockerfile
docker/postgres/: Dockerfile
