[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "almaz"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version", "dependencies"]

[tool.setuptools.packages.find]
include = ["almaz"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools_scm]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
testpaths = [
    "almaz/tests",
]